Add a new feature to save selected text on library folder.

--- a/package.json
+++ b/package.json
@@ -11,29 +11,34 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:quicklib.paste"
+		"onCommand:quicklib.paste",
+		"onCommand:quicklib.save"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"configuration": {
-      "title": "Quick Library",
-      "properties": {
-        "quicklib.libraryFolder": {
-          "type": "string",
-          "default": "$HOME/.vscode/extensions/QuickLibrary/LibraryFiles",
-          "description": "Set the path to a Library folder to managing the library."
+			"title": "Quick Library",
+			"properties": {
+				"quicklib.libraryFolder": {
+					"type": "string",
+					"default": "$HOME/.vscode/extensions/QuickLibrary/LibraryFiles",
+					"description": "Set the path to a Library folder to managing the library."
 				},
 				"quicklib.showHiddenFiles": {
-          "type": "boolean",
-          "default": false,
-          "description": "Whether to include hidden files in the list of library files displayed."
-        }
+					"type": "boolean",
+					"default": false,
+					"description": "Whether to include hidden files in the list of library files displayed."
+				}
 			}
-    },
+		},
 		"commands": [
 			{
 				"command": "quicklib.paste",
-				"title": "paste library"
+				"title": "QuickLibrary: Paste Library File"
+			},
+			{
+				"command": "quicklib.save",
+				"title": "QuickLibrary: Save Selected Text to Library Folder"
 			}
 		],
 		"keybindings": [
@@ -54,15 +59,15 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.45.0",
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
-		"eslint": "^6.8.0",
-		"@typescript-eslint/parser": "^2.30.0",
+		"@types/vscode": "^1.45.0",
 		"@typescript-eslint/eslint-plugin": "^2.30.0",
+		"@typescript-eslint/parser": "^2.30.0",
+		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
-		"mocha": "^7.1.2",
+		"mocha": "^7.2.0",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
 	}
