Add keybindings for quicklib.save

--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
 				"key": "ctrl+i",
 				"mac": "cmd+i",
 				"when": "editorTextFocus"
+			},
+			{
+				"command": "quicklib.save",
+				"key": "ctrl+shift+i",
+				"mac": "cmd+shift+i",
+				"when": "editorTextFocus"
 			}
 		]
 	},
